WHENEVER SQLERROR EXIT SQL.SQLCODE ROLLBACK
WHENEVER OSERROR EXIT 9 ROLLBACK

SET DEFINE OFF
SET FEEDBACK ON

ALTER SESSION SET CURRENT_SCHEMA = MYAPP;

CREATE TABLE teams (
  team_id      NUMBER GENERATED BY DEFAULT AS IDENTITY,
  team_code    VARCHAR2(12) NOT NULL,
  team_name    VARCHAR2(80) NOT NULL,
  city         VARCHAR2(80) NOT NULL,
  arena_name   VARCHAR2(120),
  founded_year NUMBER(4),
  active_flag  CHAR(1) DEFAULT 'Y' NOT NULL,
  created_at   TIMESTAMP DEFAULT SYSTIMESTAMP NOT NULL,
  CONSTRAINT teams_pk PRIMARY KEY (team_id),
  CONSTRAINT teams_code_uk UNIQUE (team_code),
  CONSTRAINT teams_active_ck CHECK (active_flag IN ('Y', 'N'))
);

CREATE TABLE coaches (
  coach_id      NUMBER GENERATED BY DEFAULT AS IDENTITY,
  team_id       NUMBER NOT NULL,
  first_name    VARCHAR2(60) NOT NULL,
  last_name     VARCHAR2(60) NOT NULL,
  coach_role    VARCHAR2(40) NOT NULL,
  hire_date     DATE NOT NULL,
  annual_salary NUMBER(12,2),
  active_flag   CHAR(1) DEFAULT 'Y' NOT NULL,
  CONSTRAINT coaches_pk PRIMARY KEY (coach_id),
  CONSTRAINT coaches_team_fk FOREIGN KEY (team_id) REFERENCES teams (team_id),
  CONSTRAINT coaches_active_ck CHECK (active_flag IN ('Y', 'N')),
  CONSTRAINT coaches_role_ck CHECK (coach_role IN ('HEAD_COACH', 'ASSISTANT_COACH', 'SKILLS_COACH', 'MEDICAL_STAFF'))
);

CREATE TABLE players (
  player_id           NUMBER GENERATED BY DEFAULT AS IDENTITY,
  team_id             NUMBER NOT NULL,
  jersey_number       NUMBER(2) NOT NULL,
  first_name          VARCHAR2(60) NOT NULL,
  last_name           VARCHAR2(60) NOT NULL,
  player_position     VARCHAR2(20) NOT NULL,
  birth_date          DATE,
  height_cm           NUMBER(5,2),
  weight_kg           NUMBER(5,2),
  roster_status       VARCHAR2(20) DEFAULT 'ACTIVE' NOT NULL,
  contract_start_date DATE,
  contract_end_date   DATE,
  CONSTRAINT players_pk PRIMARY KEY (player_id),
  CONSTRAINT players_team_fk FOREIGN KEY (team_id) REFERENCES teams (team_id),
  CONSTRAINT players_team_jersey_uk UNIQUE (team_id, jersey_number),
  CONSTRAINT players_position_ck CHECK (player_position IN ('POINT_GUARD', 'SHOOTING_GUARD', 'SMALL_FORWARD', 'POWER_FORWARD', 'CENTER')),
  CONSTRAINT players_status_ck CHECK (roster_status IN ('ACTIVE', 'INJURED', 'G_LEAGUE', 'RELEASED'))
);

CREATE TABLE player_contracts (
  contract_id     NUMBER GENERATED BY DEFAULT AS IDENTITY,
  player_id       NUMBER NOT NULL,
  start_date      DATE NOT NULL,
  end_date        DATE NOT NULL,
  salary_amount   NUMBER(12,2) NOT NULL,
  bonus_amount    NUMBER(12,2) DEFAULT 0 NOT NULL,
  guaranteed_flag CHAR(1) DEFAULT 'Y' NOT NULL,
  contract_status VARCHAR2(20) DEFAULT 'ACTIVE' NOT NULL,
  CONSTRAINT player_contracts_pk PRIMARY KEY (contract_id),
  CONSTRAINT contracts_player_fk FOREIGN KEY (player_id) REFERENCES players (player_id),
  CONSTRAINT contracts_dates_ck CHECK (end_date >= start_date),
  CONSTRAINT contracts_guaranteed_ck CHECK (guaranteed_flag IN ('Y', 'N')),
  CONSTRAINT contracts_status_ck CHECK (contract_status IN ('ACTIVE', 'EXPIRED', 'TERMINATED'))
);

CREATE TABLE sponsors (
  sponsor_id    NUMBER GENERATED BY DEFAULT AS IDENTITY,
  sponsor_name  VARCHAR2(120) NOT NULL,
  industry      VARCHAR2(80),
  contact_email VARCHAR2(160),
  active_flag   CHAR(1) DEFAULT 'Y' NOT NULL,
  CONSTRAINT sponsors_pk PRIMARY KEY (sponsor_id),
  CONSTRAINT sponsors_name_uk UNIQUE (sponsor_name),
  CONSTRAINT sponsors_active_ck CHECK (active_flag IN ('Y', 'N'))
);

CREATE TABLE sponsor_agreements (
  agreement_id     NUMBER GENERATED BY DEFAULT AS IDENTITY,
  sponsor_id       NUMBER NOT NULL,
  team_id          NUMBER NOT NULL,
  agreement_name   VARCHAR2(120) NOT NULL,
  start_date       DATE NOT NULL,
  end_date         DATE NOT NULL,
  annual_value     NUMBER(12,2) NOT NULL,
  payment_terms    VARCHAR2(40),
  agreement_status VARCHAR2(20) DEFAULT 'ACTIVE' NOT NULL,
  CONSTRAINT sponsor_agreements_pk PRIMARY KEY (agreement_id),
  CONSTRAINT agreements_sponsor_fk FOREIGN KEY (sponsor_id) REFERENCES sponsors (sponsor_id),
  CONSTRAINT agreements_team_fk FOREIGN KEY (team_id) REFERENCES teams (team_id),
  CONSTRAINT agreements_dates_ck CHECK (end_date >= start_date),
  CONSTRAINT agreements_status_ck CHECK (agreement_status IN ('ACTIVE', 'PENDING', 'EXPIRED', 'CANCELLED'))
);

CREATE TABLE games (
  game_id        NUMBER GENERATED BY DEFAULT AS IDENTITY,
  team_id        NUMBER NOT NULL,
  opponent_name  VARCHAR2(120) NOT NULL,
  game_date      DATE NOT NULL,
  venue_type     VARCHAR2(10) NOT NULL,
  arena_name     VARCHAR2(120),
  team_score     NUMBER(3),
  opponent_score NUMBER(3),
  season_label   VARCHAR2(9) NOT NULL,
  game_status    VARCHAR2(20) DEFAULT 'SCHEDULED' NOT NULL,
  CONSTRAINT games_pk PRIMARY KEY (game_id),
  CONSTRAINT games_team_fk FOREIGN KEY (team_id) REFERENCES teams (team_id),
  CONSTRAINT games_venue_ck CHECK (venue_type IN ('HOME', 'AWAY', 'NEUTRAL')),
  CONSTRAINT games_status_ck CHECK (game_status IN ('SCHEDULED', 'PLAYED', 'POSTPONED', 'CANCELLED'))
);

CREATE TABLE player_game_stats (
  stat_id        NUMBER GENERATED BY DEFAULT AS IDENTITY,
  game_id        NUMBER NOT NULL,
  player_id      NUMBER NOT NULL,
  minutes_played NUMBER(5,2) DEFAULT 0 NOT NULL,
  points         NUMBER(3) DEFAULT 0 NOT NULL,
  rebounds       NUMBER(3) DEFAULT 0 NOT NULL,
  assists        NUMBER(3) DEFAULT 0 NOT NULL,
  steals         NUMBER(3) DEFAULT 0 NOT NULL,
  blocks         NUMBER(3) DEFAULT 0 NOT NULL,
  turnovers      NUMBER(3) DEFAULT 0 NOT NULL,
  CONSTRAINT player_game_stats_pk PRIMARY KEY (stat_id),
  CONSTRAINT stats_game_fk FOREIGN KEY (game_id) REFERENCES games (game_id),
  CONSTRAINT stats_player_fk FOREIGN KEY (player_id) REFERENCES players (player_id),
  CONSTRAINT stats_player_game_uk UNIQUE (game_id, player_id)
);

CREATE TABLE expenses (
  expense_id    NUMBER GENERATED BY DEFAULT AS IDENTITY,
  team_id       NUMBER NOT NULL,
  expense_date  DATE NOT NULL,
  category      VARCHAR2(40) NOT NULL,
  description   VARCHAR2(240),
  amount        NUMBER(12,2) NOT NULL,
  vendor_name   VARCHAR2(120),
  approved_flag CHAR(1) DEFAULT 'N' NOT NULL,
  CONSTRAINT expenses_pk PRIMARY KEY (expense_id),
  CONSTRAINT expenses_team_fk FOREIGN KEY (team_id) REFERENCES teams (team_id),
  CONSTRAINT expenses_amount_ck CHECK (amount >= 0),
  CONSTRAINT expenses_approved_ck CHECK (approved_flag IN ('Y', 'N')),
  CONSTRAINT expenses_category_ck CHECK (category IN ('TRAVEL', 'EQUIPMENT', 'PAYROLL', 'MEDICAL', 'FACILITY', 'MARKETING', 'OTHER'))
);

CREATE TABLE revenues (
  revenue_id   NUMBER GENERATED BY DEFAULT AS IDENTITY,
  team_id      NUMBER NOT NULL,
  revenue_date DATE NOT NULL,
  category     VARCHAR2(40) NOT NULL,
  description  VARCHAR2(240),
  amount       NUMBER(12,2) NOT NULL,
  source_name  VARCHAR2(120),
  CONSTRAINT revenues_pk PRIMARY KEY (revenue_id),
  CONSTRAINT revenues_team_fk FOREIGN KEY (team_id) REFERENCES teams (team_id),
  CONSTRAINT revenues_amount_ck CHECK (amount >= 0),
  CONSTRAINT revenues_category_ck CHECK (category IN ('TICKET_SALES', 'SPONSORSHIP', 'MERCHANDISE', 'BROADCAST', 'CONCESSIONS', 'OTHER'))
);

COMMIT;

