WHENEVER SQLERROR EXIT SQL.SQLCODE ROLLBACK
WHENEVER OSERROR EXIT 9 ROLLBACK

SET DEFINE OFF
SET FEEDBACK ON

ALTER SESSION SET CURRENT_SCHEMA = MYAPP;

CREATE TABLE training_sessions (
  session_id       NUMBER GENERATED BY DEFAULT AS IDENTITY,
  team_id          NUMBER NOT NULL,
  lead_coach_id    NUMBER,
  session_date     DATE NOT NULL,
  session_type     VARCHAR2(40) NOT NULL,
  duration_minutes NUMBER(4) NOT NULL,
  location_name    VARCHAR2(120),
  session_status   VARCHAR2(20) DEFAULT 'PLANNED' NOT NULL,
  CONSTRAINT training_sessions_pk PRIMARY KEY (session_id),
  CONSTRAINT training_team_fk FOREIGN KEY (team_id) REFERENCES teams (team_id),
  CONSTRAINT training_coach_fk FOREIGN KEY (lead_coach_id) REFERENCES coaches (coach_id),
  CONSTRAINT training_duration_ck CHECK (duration_minutes BETWEEN 15 AND 300),
  CONSTRAINT training_status_ck CHECK (session_status IN ('PLANNED', 'COMPLETED', 'CANCELLED'))
);

CREATE INDEX training_team_date_ix ON training_sessions (team_id, session_date);

