WHENEVER SQLERROR EXIT SQL.SQLCODE ROLLBACK
WHENEVER OSERROR EXIT 9 ROLLBACK

SET DEFINE OFF
SET FEEDBACK ON

ALTER SESSION SET CURRENT_SCHEMA = MYAPP;

CREATE TABLE injury_reports (
  injury_id        NUMBER GENERATED BY DEFAULT AS IDENTITY,
  player_id        NUMBER NOT NULL,
  reported_date    DATE NOT NULL,
  injury_type      VARCHAR2(80) NOT NULL,
  severity_level   VARCHAR2(20) NOT NULL,
  expected_return  DATE,
  medical_notes    VARCHAR2(500),
  report_status    VARCHAR2(20) DEFAULT 'OPEN' NOT NULL,
  CONSTRAINT injury_reports_pk PRIMARY KEY (injury_id),
  CONSTRAINT injury_player_fk FOREIGN KEY (player_id) REFERENCES players (player_id),
  CONSTRAINT injury_severity_ck CHECK (severity_level IN ('LOW', 'MEDIUM', 'HIGH')),
  CONSTRAINT injury_status_ck CHECK (report_status IN ('OPEN', 'CLEARED', 'MONITORING'))
);

CREATE INDEX injury_player_date_ix ON injury_reports (player_id, reported_date);

